# finetuningmemorylayers

./: .gitignore  evaluate.ipynb  finetuned_evaluator.py  pyproject.toml  retrofit_base_model.ipynb  test_train.ipynb  test_train_ft.ipynb  test_train_smf.ipynb
eval_pipeline/: base_evaluator.py  finetuned_evaluator.py  main.py  memory_evaluator.py  pyproject.toml
eval_pipeline/tasks/: triviaqa_f1.yaml
memory_layers/: __init__.py  callbacks.py  data.py  evaluation.py  ft_callbacks.py  memory.py  sft_callbacks.py  xformer_embeddingbag.py
qwen_mem/: memory_layer.py  qwen_with_memory.py  requirements.txt
