[project]
name = "finetuningmemorylayers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "transformers[torch]>=4.57.3",
    "wandb>=0.23.0",
]
